--- a/left.css
+++ b/left.css
@@ -1,4 +1,62 @@
 body {
   display: flex;
   flex-direction: block;
+  margin: 0;
+}
+
+div.left {
+  justify-content: space-between;
+  background-color: rgb(23, 21, 80);
+  height: 590px;
+  width: 150px;
+  display: flex;
+  flex-direction: column;
+}
+
+div.left > div.left1 {
+  display: flex;
+  flex-direction: column;
+}
+
+div.left > div.left2 {
+  display: flex;
+  flex-direction: column;
+}
+
+div.left > div.left1 > button {
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(15, 15, 99);
+  width: 120px;
+  border: none;
+}
+
+div.left > div.left1 > button.one {
+  background-color: rgb(79, 101, 225);
+}
+
+div.left > div.left1 > button > p {
+  color: rgba(255, 255, 255, 0.768);
+}
+
+div.left > div.left2 > button > p {
+  color: rgba(255, 255, 255, 0.768);
+}
+
+div.left > div.left1 > button > img {
+  width: 30px;
+  height: 30px;
+}
+
+div.left > div.left2 > button {
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(15, 15, 99);
+  width: 120px;
+  border: none;
+}
+
+div.left > div.left2 > button > img {
+  width: 30px;
+  height: 30px;
 }
