--- a/left.css
+++ b/left.css
@@ -1,3 +1,9 @@
+.story-script-regular {
+  font-family: "Story Script", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   display: flex;
   flex-direction: block;
